Bug 1752190 - Improve readablility of the "more info" icon in panels, for linux r=dao
Differential Revision: https://phabricator.services.mozilla.com/D137061

UltraBlame original commit: 33deb1f8a4aacc80ed6d63674b98ebf81c4fcdab

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -183,6 +183,7 @@ toolbarseparator + .panel-subview-body,
 
 .panel-info-button {
   appearance: none;
+  color: inherit;
   padding: 0;
   margin-inline-end: 4px;
   border-radius: var(--toolbarbutton-border-radius);
@@ -1959,8 +1960,7 @@ panelview:not([mainview]) #PanelUI-whatsNew-title {
   color: #fff;
   /* Set custom hover/focus/active states on the info button,
      to make them more visible on the header background */
-  --arrowpanel-dimmed: #0003;
-  --arrowpanel-dimmed-further: #0005;
+  --panel-item-hover-bgcolor: #0005;
   --panel-item-active-bgcolor: #0007;
 }
 
