Bug 1752935 - Reuse welcome bundle from Spotlight for multistage template r=pdahiya,andreio
Detect about:welcome template usage and move modal shadow styling to content. Remove 93-backwards-compatible logoImageURL and update schema. Only basic functionality for initial testing.

Differential Revision: https://phabricator.services.mozilla.com/D138866

UltraBlame original commit: 3e12540c69a9f83171f0bd2d64d70f7495d1194c

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1636,6 +1636,10 @@ toolbar[keyNav=true]:not([collapsed=true], [customizing=true]) toolbartabstop {
   background: linear-gradient(transparent, rgba(28, 27, 34, 0.45) 50%);
 }
 
+#window-modal-dialog.noShadow .dialogBox {
+  box-shadow: none;
+}
+
 /* For the window-modal dialog, the background is supplied by the HTML dialog
  * backdrop, so the dialogOverlay background above "double backgrounds" - so
  * we remove it here: */
