Bug 1755665 - Use --focus-outline instead of --deafult-focusring for .text-link across platforms. r=Itiel
Differential Revision: https://phabricator.services.mozilla.com/D138886

UltraBlame original commit: b764644bbd84c039470d3a1cc08cd26284246122

--- a/toolkit/themes/shared/global.inc.css
+++ b/toolkit/themes/shared/global.inc.css
@@ -154,6 +154,15 @@ xul|label[disabled="true"] {
   text-decoration: underline;
 }
 
+.text-link:focus-visible {
+  outline: var(--focus-outline);
+  /* Not using --focus-outline-offset here because that's intended for elements
+     with a background, and we only want a slight offset here while not
+     overlapping adjacent text. */
+  outline-offset: 1px;
+  border-radius: 1px;
+}
+
 /* Textbox context menu */
 
 .textbox-contextmenu:-moz-locale-dir(rtl) {
