Bug 1755057 - Part 2: Don't show best match in the preferences UI if the best match feature is disabled. r=daisuke,Gijs,preferences-reviewers
This is based on part 1 in D138583. It hides the best match toggle switch when
the best match feature is disabled. The best match feature is a sub-feature of
Firefox Suggest, so the toggle is also hidden if Suggest is disabled, along with
all the other Suggest UI.

Depends on D138583

Differential Revision: https://phabricator.services.mozilla.com/D138584

UltraBlame original commit: 5e34f04e5eddf9088e7bff3711b8dc9951c4d85d

--- a/browser/components/preferences/privacy.inc.xhtml
+++ b/browser/components/preferences/privacy.inc.xhtml
@@ -655,7 +655,9 @@
          participating in session restore. autocomplete="off" is ignored on the
          inputs themselves. -->
     <html:form id="firefoxSuggestForm" autocomplete="off" hidden="true"/>
-    <vbox class="firefoxSuggestOptionBox">
+    <vbox id="firefoxSuggestBestMatchOptionBox"
+          class="firefoxSuggestOptionBox"
+          hidden="true">
       <hbox align="center">
         <label id="firefoxSuggestBestMatchLabel"
                flex="1"
@@ -663,7 +665,7 @@
         <html:input id="firefoxSuggestBestMatchToggle"
                     type="checkbox"
                     class="toggle-button firefoxSuggestToggle"
-                    preference="browser.urlbar.bestMatch.enabled"
+                    preference="browser.urlbar.suggest.bestmatch"
                     form="firefoxSuggestForm"
                     aria-labelledby="firefoxSuggestBestMatchLabel" />
       </hbox>
