Bug 1747358 - The "about:logins" page cannot be scrolled anymore when it is smaller resized. r=tgiles
Differential Revision: https://phabricator.services.mozilla.com/D138868

UltraBlame original commit: 639661d6eb967fee4d00880d5df55775a213e848

--- a/browser/components/aboutlogins/content/aboutLogins.css
+++ b/browser/components/aboutlogins/content/aboutLogins.css
@@ -62,7 +62,6 @@ login-item[data-editing="true"] + login-intro,
   display: none;
 }
 
-
 .heading-wrapper {
   display: flex;
   justify-content: center;
@@ -90,4 +89,11 @@ login-item[data-editing="true"] + login-intro,
   width: 100vw;
   height: 100vh;
   background-color: rgba(0,0,0,0.2);
+}
+
+body > section {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
