Bug 1653486 - Replace all non-user-facing references to "master" password. r=dimi,tgiles,preferences-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D138113

UltraBlame original commit: 2b784d470808c8598238e420695b4a1d0861f21d

--- a/toolkit/components/passwordmgr/test/mochitest/test_primary_password.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_primary_password.html
@@ -50,9 +50,9 @@ let win = window.open("about:blank");
 SimpleTest.registerCleanupFunction(() => win.close());
 
 add_task(async function setup() {
-  ok(await isLoggedIn(), "should be initially logged in (no MP)");
-  enableMasterPassword();
-  ok(!await isLoggedIn(), "should be logged out after setting MP");
+  ok(await isLoggedIn(), "should be initially logged in (no PP)");
+  enablePrimaryPassword();
+  ok(!await isLoggedIn(), "should be logged out after setting PP");
 });
 
 add_task(async function test_1() {
@@ -74,7 +74,7 @@ add_task(async function test_1() {
   };
   var action = {
     buttonClick: "ok",
-    passField: LoginTestUtils.masterPassword.masterPassword,
+    passField: LoginTestUtils.primaryPassword.primaryPassword,
   };
   var promptDone = handlePrompt(state, action);
 
@@ -84,7 +84,7 @@ add_task(async function test_1() {
   is(logins.length, 3, "expected number of logins");
 
   ok(await isLoggedIn(), "should be logged in after MP prompt");
-  logoutMasterPassword();
+  logoutPrimaryPassword();
   ok(!await isLoggedIn(), "should be logged out");
 });
 
@@ -134,7 +134,7 @@ add_task(async function test_3() {
   };
   var action = {
     buttonClick: "ok",
-    passField: LoginTestUtils.masterPassword.masterPassword,
+    passField: LoginTestUtils.primaryPassword.primaryPassword,
   };
   var promptDone = handlePrompt(state, action);
 
@@ -142,7 +142,7 @@ add_task(async function test_3() {
 
   info("Load a single window to trigger a MP");
   await SimpleTest.promiseFocus(win, true);
-  win.location = exampleCom + "subtst_master_pass.html";
+  win.location = exampleCom + "subtst_primary_pass.html";
 
   await promptDone;
   info("promptDone");
@@ -161,7 +161,7 @@ add_task(async function test_3() {
   });
 
   ok(await isLoggedIn(), "should be logged in");
-  logoutMasterPassword();
+  logoutPrimaryPassword();
   ok(!await isLoggedIn(), "should be logged out");
 });
 
@@ -188,7 +188,7 @@ add_task(async function test_4() {
 
   // first part of loading 2 MP-triggering windows
   await SimpleTest.promiseFocus(win);
-  win.location = exampleOrg + "subtst_master_pass.html";
+  win.location = exampleOrg + "subtst_primary_pass.html";
   // The MP prompt is open but don't take any action yet.
   await promptDone;
 
@@ -210,7 +210,7 @@ add_task(async function test_4() {
 
   // Since the Primary Password prompt is open, we can't focus another tab
   // to load the second form. Instead, we load the same form into an iframe.
-  let url = exampleOrg + "subtst_master_pass.html";
+  let url = exampleOrg + "subtst_primary_pass.html";
   await SpecialPowers.spawn(win, [url], async function(urlF) {
     let iframe = this.content.document.querySelector("iframe");
     var loadPromise = new Promise(resolve => {
@@ -261,7 +261,7 @@ add_task(async function test_4() {
   // fill existing MP dialog with MP.
   action = {
     buttonClick: "ok",
-    passField: LoginTestUtils.masterPassword.masterPassword,
+    passField: LoginTestUtils.primaryPassword.primaryPassword,
   };
   await handlePrompt(state, action);
   await fillPromise;
@@ -302,7 +302,7 @@ add_task(async function test_4() {
 // XXX do a test5ABC with clicking cancel?
 
 SimpleTest.registerCleanupFunction(function finishTest() {
-  disableMasterPassword();
+  disablePrimaryPassword();
 });
 
 </script>
