--- a/browser/components/pocket/content/panels/js/components/ArticleList/ArticleList.scss
+++ b/browser/components/pocket/content/panels/js/components/ArticleList/ArticleList.scss
@@ -13,13 +13,11 @@
     }
   }
 
-  .stp_article_list_thumb,
-  .stp_article_list_thumb_placeholder {
+  .stp_article_list_thumb {
     width: 40px;
     height: 40px;
     border-radius: 4px;
     margin-inline-end: 8px;
-    background-color: #ECECEE;
   }
 
   .stp_article_list_header {
@@ -28,7 +26,7 @@
     font-size: 0.85em;
     line-height: 1.27em;
     color: #15141A;
-    margin: 0 0 4px;
+    margin: 4px 0px;
   }
 
   .stp_article_list_publisher {
@@ -37,6 +35,6 @@
     font-size: 0.85em;
     line-height: 1.27em;
     color: #52525E;
-    margin: 4px 0 0;
+    margin: 4px 0px;
   }
 }
