--- a/toolkit/components/remotebrowserutils/tests/browser/dummy_page.html
+++ b/toolkit/components/remotebrowserutils/tests/browser/dummy_page.html
@@ -7,7 +7,9 @@
     <script>
         // Prevent this page from being stored in the bfcache for the
         // browser_httpToFileHistory.js test
-        window.blockBFCache = new RTCPeerConnection();
+        window.addEventListener('beforeunload', event => {
+            // do nothing
+        });
     </script>
 </body>
 </html>
