--- a/browser/components/aboutlogins/content/aboutLogins.html
+++ b/browser/components/aboutlogins/content/aboutLogins.html
@@ -267,7 +267,7 @@
           <div class="error-message">
             <span class="error-message-text" data-l10n-id="about-logins-error-message-default"></span>
             <span class="error-message-link">
-              <a data-l10n-name="duplicate-link" href=""></a>
+              <a data-l10n-name="duplicate-link" tabindex="0" href=""></a>
             </span>
           </div>
           <div class="header">
