Bug 1753759 - Eliminate the preprocessor %includes from the preferences CSS. r=dao,preferences-reviewers,mstriemer
* Inline the platform specific rules in a single preferences/dialog.css.
* Inline the platform specific rules in a single preferences/preferences.css.
  Note that the linux and windows .actionButtons margins were not in use - the margins from dialog.css were applied and are correct as-is so this override was removed.
* import rather than %include the usercontext.css in the containers preferences UI

Differential Revision: https://phabricator.services.mozilla.com/D138979

UltraBlame original commit: 9cb0aa1c3ad37619b13916594b7e609a80333327

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -4,6 +4,27 @@
 
 @namespace html "http://www.w3.org/1999/xhtml";
 
+/* Global rules */
+* {
+  user-select: text;
+}
+
+body {
+  font-size: 1.25em;
+}
+
+@media (-moz-platform: macos) {
+  body {
+    font-size: 1.36em;
+  }
+}
+
+@media (-moz-platform: linux) {
+  body {
+    font-size: 1.11em;
+  }
+}
+
 #preferences-root {
   text-rendering: optimizeLegibility;
 }
@@ -29,10 +50,6 @@
   -moz-box-orient: vertical;
 
   --main-pane-width: 664px;
-}
-
-* {
-  user-select: text;
 }
 
 /*
@@ -1452,5 +1469,53 @@ richlistitem .text-link:hover {
 
   .qr-code-box-title {
     color: #fbfbfe;
+  }
+}
+
+/* Platform-specific tweaks & overrides */
+
+@media (-moz-platform: macos) {
+  tabpanels {
+    padding: 20px 7px 7px;
+  }
+
+  #browserUseCurrent,
+  #browserUseBookmark,
+  #browserUseBlank {
+    margin-top: 10px;
+  }
+
+  #advancedPrefs {
+    margin: 0 8px;
+  }
+
+  #privacyPrefs {
+    padding: 0 4px;
+  }
+
+  #privacyPrefs > tabpanels {
+    padding: 18px 10px 10px;
+  }
+
+  #OCSPDialogPane {
+    font: message-box !important;
+  }
+
+  /**
+   * Update Preferences
+   */
+  #autoInstallOptions {
+    margin-inline-start: 20px;
+  }
+
+  .updateControls {
+    margin-inline-start: 10px;
+  }
+}
+
+@media (-moz-platform: linux) {
+  .treecol-sortdirection {
+    /* override the Linux only toolkit rule */
+    appearance: none;
   }
 }
