--- a/browser/themes/shared/preferences/dialog.css
+++ b/browser/themes/shared/preferences/dialog.css
@@ -2,6 +2,26 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this file,
    - You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+:root > * {
+  font-size: 1.12em;
+}
+
+@media (-moz-platform: macos) {
+  window {
+    font: message-box !important;
+  }
+
+  :root > * {
+    font-size: 1.18em;
+  }
+}
+
+@media (-moz-platform: linux) {
+  :root > * {
+    font-size: 1.05em;
+  }
+}
+
 window,
 dialog {
   appearance: none;
